# expense2

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py
app/scrapers/: base.py
app/services/: __init__.py  expense_analysis.py
app/templates/: analysis.html  base.html  dashboard.html
app/templates/partials/: transaction_list.html
scripts/: auth_mf.py  import_mf.py  import_standalone.py  parse_mf.py
