[project]
name = "expense-tracker"
version = "0.1.0"
description = "Minimal personal finance dashboard with HTMX and Python"
authors = [{name = "User", email = "user@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.16",
    "playwright>=1.42.0",
    "pandas>=2.2.1",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "ruff>=0.3.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
